--- a/src/partials/components/button.html
+++ b/src/partials/components/button.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="section">
-        <h2>Зразок кнопок, special для команди</h2>
+        <h2>Зразок кнопок для тегу button, special для команди</h2>
         
         <p>Щоб використати оформлення додайте кнопці клас "red-button" або "white-button"</p>
         
@@ -8,10 +8,7 @@
         <button class="red-button">Read more</button>
         <button class="white-button">Read more</button>
         
-        <h3>Кнопки зі стрілками</h3>
-        <p>Стандартний відступ іконки - задайте тегу SVG - клас "button__icon"</p>
-
-        <p>Шлях до іконок: </p>
+        <h3>Щоб отримати кнопки зі стрілками додайте всередину button тег SVG з класом "button__icon" та use з посиланням</h3>
         <p>use href="./images/icons.svg#icon-red-button"</p>
         <p>use href="./images/icons.svg#icon-white-button"</p>
         
@@ -27,6 +24,6 @@
             </svg>
         </button>
 
-        <p>Щоб задати свої налаштування (наприклад щоб перебити pading) - додайте в тег button свій унікальний клас</p>
+        <p>Щоб задати свої налаштування (наприклад щоб перебити pading) - додайте в тег button свій унікальний клас, до прикладу class="red-button about__button"</p>
     </div>
 </div>
