--- a/src/partials/components/about-modal.html
+++ b/src/partials/components/about-modal.html
@@ -24,5 +24,5 @@
     </p>
 </div>
 <!-- /Модалка -->
-<!-- Подложка под модальным окном -->
+<!-- Оверлей модального вікна -->
 <div class="overlay js-overlay-modal"></div>
