--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,9 @@
 <section class="footer">
     <div class="container footer__container">
-        <p class="footer__title">
-            <span class="footer__title--accent">homemade ice cream made</span><br>
-            with passion
-        </p>
+        <div class="footer__title-wrapper">
+                    <p class="footer__title--pink">homemade ice cream made</p>
+                    <p class="footer__title--red">with passion</p>
+        </div>
         <div class="footer__contacts-wrapper">
             <ul class="socials list">
                 <li class="socials__item">
@@ -34,5 +34,5 @@
             </p>
         </div>
     </div>
-    <p class="footer__copyright">&copy 2022 - IceCream. All Rights Reserved.</p>
+    <p class="footer__copyright">&copy; 2022 - IceCream. All Rights Reserved.</p>
 </section>
