--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,31 +1,49 @@
 
-    <section class="customer-review">
-        <div class="customer-review container">
+    <section class="customer" id="customer">
+        <div class="customer__container">
             <h2 hidden>slider customer hidden</h2>
-            <img src="images/demo.jpg" alt="" width="320" />
+            <img class="photos" src="/images/customer_reviews/slm/card1_result.webp" alt="" height="85px" width="85px">
         
-            <div class="customer-review__blockquote">
-             <p class="customer-review__text">
+            <div class="customer__blockquote">
+                <div class="customer__thumb">
+                <svg width="50" height="40">
+                  <use href="/images/customer_reviews/slm/blockquote.svg">
+                  </use>  
+                </svg>
+                <div class="customer__line"></div>
+             <p class="customer__text">
                 Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
              </p>
             </div>
+            </div>
 <!-- крапки -->
-            <ol class="breadcrumb">
-                <li class="breadcrumb__item"></li>
-                <li class="breadcrumb__item"></li>
-                <li class="breadcrumb__item "></li>
+            <ol class="customer__breadcrumb">
+                <li class="customer__item"></li>
+                <li class="customer__item"></li>
+                <li class="customer__item "></li>
               </ol>
-    <span class="customer-review__comment">
-        Emily, Los Angeles
-    </span>
-
-<ul>
-    <li></li>
-    <li></li>
-    <li></li>
-</ul>
-
+    <p class="customer__comment">Emily, Los Angeles</p>
+</div>
+<!-- хатинка і еліпс -->
+      <ul class="customer__carusel">
+          <li class="customer__home">
+              <svg width="12" height="12">
+                <use href="/images/customer_reviews/slm/home.svg">
+                </use>  
+              </svg>
+          </li>
+          <li class="customer__items">
+            <svg width="12" height="12">
+                <use href="/images/customer_reviews/slm/Ellipse.svg">
+                </use>  
+              </svg>
+          </li>
+          <li class="customer__items">
+            <svg width="12" height="12">
+                <use href="/images/customer_reviews/slm/Ellipse.svg">
+                </use>  
+              </svg>
+          </li>
+      </ul>
         </div>
         </section> 
-</body>
-</html>
