--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-  padding-top: 60px;
+  // padding-top: 60px;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 245, 246, 1));
 }
 .upperwrapper {
