--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,70 +1,39 @@
-.section { //буде загальний клас
-    padding-top: 80px;
-    padding-bottom: 40px;
+.section.products {
+    @include section-class(80px, 40px);    
 
-    @media screen and (min-width: 768px) {
-        padding-top: 40px;
-        padding-bottom: 60px;
+    @include mq(tablet) {
+        @include section-class(40px, 60px);        
     }
 
-    @media screen and (min-width: 1280px) {
-        padding-top: 60px;        
+    @include mq(desktop) {
+        @include section-class(60px, 60px);               
     }
 }
 
-.products { //тимчасове рішення, вирішити що з контейнером
-    & .container {
-        @media screen and (min-width: 1280px) {
-            width: 1280px;
-        }        
-    }
-}
+// .products {
+    
+// }
 
-.products__title { //буде загальний клас, але нижні відступи треба
+.products__title {
     margin-bottom: 148px;
-    font-family: $font-titel;
-    font-weight: 400;
-    font-size: 34px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;    
-    color: $color-font-red;
 
-    @media screen and (min-width: 768px) {
-        margin-bottom: 154px;
-        font-size: 48px;               
+    @include mq(tablet) {
+        margin-bottom: 154px;                     
     }
 
-    @media screen and (min-width: 1280px) {
-        margin-bottom: 261px;
-        font-size: 58px;
-        line-height: 1.14;
-        letter-spacing: 0.06em;
+    @include mq(desktop) {
+        margin-bottom: 261px;        
     }
 }
 
-.products__subtitle { //буде загальний клас
-    display: block;
-    margin-bottom: 15px;   
-    font-family: $font-titel;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.17;
-    text-align: center;
-    text-transform: uppercase;
-    color: $color-font-span;
+.products__subtitle {    
 
-    @media screen and (min-width: 768px) {
-        margin-bottom: 18px;
-        font-size: 26px;
-        line-height: 1.15;
+    @include mq(tablet) {
+        margin-bottom: 18px;        
     }
 
-    @media screen and (min-width: 1280px) {
-        margin-bottom: 16px;
-        font-size: 30px;
-        line-height: 1.13;
+    @include mq(desktop) {
+        margin-bottom: 16px;        
     }
 }
 
@@ -72,50 +41,45 @@
     width: 100%;
     height: 100%;    
 
-    @media screen and (min-width: 768px) {
+    @include mq(tablet) {
         display: flex;            
         gap: 16px;
         justify-content: center;
     }
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
         gap: 32px;
     }
 }
 
 .cards__item {
     position: relative;     
-    transform-style: preserve-3d;  
-    // transform-origin: center right;
-    transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1); 
+    transform-style: preserve-3d;      
+    transition: transform 1s $functional-cubic; 
     
     &:not(:last-child) {
         @include mq(mobile-only) {
                 margin-bottom: 140px;
-            }
-        // @media screen and (max-width: 767.9px) {
-        //     margin-bottom: 140px;
-        // }        
+            }              
     }
 
-    @media screen and (max-width: 767.9px) {
+    @include mq(mobile-only) {
         max-width: 450px;
         min-height: 493px;
     }
     
-    @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+    @include mq(tablet-only) {
         width: 224px;
         min-height: 472px;
     }
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
         width: 394px;
         min-height: 587px;
     }
 
     &.cards__item--rotated {        
-        transform: rotateY(180deg);
-        // transform: translateX(-100%) rotateY(-180deg);
+        transform: rotateY(180deg);        
     }             
 }
 
@@ -127,11 +91,11 @@
     border-radius: 24px;    
     backface-visibility: hidden;     
     
-    @media screen and (min-width: 768px) {
+    @include mq(tablet) {
         padding-top: 118px;              
     }
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
         padding-top: 165px;
         padding-bottom: 60px;               
     }
@@ -149,13 +113,13 @@
         width: 280px;
         height: 280px;
 
-        @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+        @include mq(tablet-only) {
             top: -138px;
             width: 224px;
             height: 224px;
         }
 
-        @media screen and (min-width: 1280px) {
+        @include mq(desktop) {
             top: -261px;
             width: 394px;
             height: 394px;
@@ -167,15 +131,24 @@
     &.cards__side::after {
         background-image: image-set(url("../images/products/320-card-1.png") 1x, url("../images/products/320-card-1@2x.png") 2x);
         background-image: -webkit-image-set(url("../images/products/320-card-1.png") 1x, url("../images/products/320-card-1@2x.png") 2x);
+        
+        background-image: image-set(url("../images/products/webp/320-card-1.webp") 1x, url("../images/products/webp/320-card-1@2x.webp") 2x);
+        background-image: -webkit-image-set(url("../images/products/webp/320-card-1.webp") 1x, url("../images/products/webp/320-card-1@2x.webp") 2x);
 
-        @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+        @include mq(tablet-only) {
             background-image: image-set(url("../images/products/768-card-1.png") 1x, url("../images/products/768-card-1@2x.png") 2x);
             background-image: -webkit-image-set(url("../images/products/768-card-1.png") 1x, url("../images/products/768-card-1@2x.png") 2x);
+            
+            background-image: image-set(url("../images/products/webp/768-card-1.webp") 1x, url("../images/products/webp/768-card-1@2x.webp") 2x);
+            background-image: -webkit-image-set(url("../images/products/webp/768-card-1.webp") 1x, url("../images/products/webp/768-card-1@2x.webp") 2x);
         }
 
-        @media screen and (min-width: 1280px) {
+        @include mq(desktop) {
             background-image: image-set(url("../images/products/1280-card-1.png") 1x, url("../images/products/1280-card-1@2x.png") 2x);
             background-image: -webkit-image-set(url("../images/products/1280-card-1.png") 1x, url("../images/products/1280-card-1@2x.png") 2x);
+            
+            background-image: image-set(url("../images/products/webp/1280-card-1.webp") 1x, url("../images/products/webp/1280-card-1@2x.webp") 2x);
+            background-image: -webkit-image-set(url("../images/products/webp/1280-card-1.webp") 1x, url("../images/products/webp/1280-card-1@2x.webp") 2x);
         }
     }
 
@@ -193,14 +166,23 @@
         background-image: image-set(url("../images/products/320-card-2.png") 1x, url("../images/products/320-card-2@2x.png") 2x);
         background-image: -webkit-image-set(url("../images/products/320-card-2.png") 1x, url("../images/products/320-card-2@2x.png") 2x);
 
-        @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+        background-image: image-set(url("../images/products/webp/320-card-2.webp") 1x, url("../images/products/webp/320-card-2@2x.webp") 2x);
+        background-image: -webkit-image-set(url("../images/products/webp/320-card-2.webp") 1x, url("../images/products/webp/320-card-2@2x.webp") 2x);
+
+        @include mq(tablet-only) {
             background-image: image-set(url("../images/products/768-card-2.png") 1x, url("../images/products/768-card-2@2x.png") 2x);
             background-image: -webkit-image-set(url("../images/products/768-card-2.png") 1x, url("../images/products/768-card-2@2x.png") 2x);
+
+            background-image: image-set(url("../images/products/webp/768-card-2.webp") 1x, url("../images/products/webp/768-card-2@2x.webp") 2x);
+            background-image: -webkit-image-set(url("../images/products/webp/768-card-2.webp") 1x, url("../images/products/webp/768-card-2@2x.webp") 2x);
         }
 
-        @media screen and (min-width: 1280px) {
+        @include mq(desktop) {
             background-image: image-set(url("../images/products/1280-card-2.png") 1x, url("../images/products/1280-card-2@2x.png") 2x);
             background-image: -webkit-image-set(url("../images/products/1280-card-2.png") 1x, url("../images/products/1280-card-2@2x.png") 2x);
+
+            background-image: image-set(url("../images/products/webp/1280-card-2.webp") 1x, url("../images/products/webp/1280-card-2@2x.webp") 2x);
+            background-image: -webkit-image-set(url("../images/products/webp/1280-card-2.webp") 1x, url("../images/products/webp/1280-card-2@2x.webp") 2x);
         }
     }
 
@@ -218,14 +200,23 @@
         background-image: image-set(url("../images/products/320-card-3.png") 1x, url("../images/products/320-card-3@2x.png") 2x);
         background-image: -webkit-image-set(url("../images/products/320-card-3.png") 1x, url("../images/products/320-card-3@2x.png") 2x);
 
-        @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+        background-image: image-set(url("../images/products/webp/320-card-3.webp") 1x, url("../images/products/webp/320-card-3@2x.webp") 2x);
+        background-image: -webkit-image-set(url("../images/products/webp/320-card-3.webp") 1x, url("../images/products/webp/320-card-3@2x.webp") 2x);
+
+        @include mq(tablet-only) {
             background-image: image-set(url("../images/products/768-card-3.png") 1x, url("../images/products/768-card-3@2x.png") 2x);
             background-image: -webkit-image-set(url("../images/products/768-card-3.png") 1x, url("../images/products/768-card-3@2x.png") 2x);
+
+            background-image: image-set(url("../images/products/webp/768-card-3.webp") 1x, url("../images/products/webp/768-card-3@2x.webp") 2x);
+            background-image: -webkit-image-set(url("../images/products/webp/768-card-3.webp") 1x, url("../images/products/webp/768-card-3@2x.webp") 2x);
         }
 
-        @media screen and (min-width: 1280px) {
+        @include mq(desktop) {
             background-image: image-set(url("../images/products/1280-card-3.png") 1x, url("../images/products/1280-card-3@2x.png") 2x);
             background-image: -webkit-image-set(url("../images/products/1280-card-3.png") 1x, url("../images/products/1280-card-3@2x.png") 2x);
+
+            background-image: image-set(url("../images/products/webp/1280-card-3.webp") 1x, url("../images/products/webp/1280-card-3@2x.webp") 2x);
+            background-image: -webkit-image-set(url("../images/products/webp/1280-card-3.webp") 1x, url("../images/products/webp/1280-card-3@2x.webp") 2x);
         }
     }
 
@@ -276,11 +267,11 @@
     letter-spacing: 0.04em;
     color: $color-font-white;
 
-    @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+    @include mq(tablet-only) {
         max-width: 160px;
     }
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
         max-width: 241px;
         margin-bottom: 60px;
         font-size: 16px;
@@ -298,8 +289,8 @@
     margin-right: auto;
     border-radius: 50%;
     background-color: $color-font-white;    
-    transition: background-color .3s cubic-bezier(0.4, 0, 0.2, 1), 
-    fill .3s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color .3s $functional-cubic, 
+    fill .3s $functional-cubic;
 
     &:hover, &:focus {
         background-color: $color-font-red;        
@@ -315,7 +306,7 @@
     width: 16px;
     height: 16px;
     fill: $color-font-red;
-    transition: fill .3s cubic-bezier(0.4, 0, 0.2, 1);    
+    transition: fill .3s $functional-cubic;    
 
     .btn-circle:hover &,
     .btn-circle:focus & {
