--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,5 +1,5 @@
 
-    <section class="customer" id="customer">
+    <section class="customer" id="customer-reviews">
         <div class="customer__container">
             <h2 hidden>slider customer hidden</h2>
             <img class="photos" src="/images/customer_reviews/slm/card1_result.webp" alt="" height="85px" width="85px">
