--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,10 +4,10 @@
       <h1 class="hero__title">ice cream made with <span class="hero__title--red">passion</span></h1>
       <ul class="links">
         <li class="links__item">
-          <a href="#" class="links__link links__link--red">Products</a>
+          <a href="#products" class="links__link links__link--red">Products</a>
         </li>
         <li class="links__item">
-          <a href="#" class="links__link links__link--white">How it’s made?</a>
+          <a href="#about" class="links__link links__link--white">How it’s made?</a>
         </li>
       </ul>
     </div>
