--- a/src/sass/basis/_reset.scss
+++ b/src/sass/basis/_reset.scss
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth;
+}
 body {
 //   background-color: var(--bcg-main);
 //   font-family: var(--font-primary), var(--font-primary-rezerv);
