customer review again

--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,8 +1,8 @@
 
-    <section class="customer" id="customer-reviews">
+    <section class="section customer" id="customer">
         <div class="customer__container">
             <h2 hidden>slider customer hidden</h2>
-            <img class="photos" src="/images/customer_reviews/slm/card1_result.webp" alt="" height="85px" width="85px">
+            <img class="customer__photos" src="/images/customer_reviews/slm/card1_result.webp" alt="customer">
         
             <div class="customer__blockquote">
                 <div class="customer__thumb">
@@ -15,7 +15,7 @@
                 Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
              </p>
             </div>
-            </div>
+          </div>
 <!-- крапки -->
             <ol class="customer__breadcrumb">
                 <li class="customer__item"></li>
@@ -45,5 +45,4 @@
               </svg>
           </li>
       </ul>
-        </div>
         </section> 
