--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,8 +14,8 @@
             </ul>
             <button class="button-menu" data-menu-button type="button" aria-expanded="false">
                 <svg class="button-menu-icon">
-                    <use class="icon-open" href="/images/icons.svg#icon-menu"></use>
-                    <use class="icon-cloze" href="/images/icons.svg#icon-close_menu"></use>
+                    <use class="icon-open" href="/images/icons.svg#icon-open"></use>
+                    <use class="icon-cloze" href="/images/icons.svg#icon-close"></use>
                 </svg>
             </button>
             <div class="mobile-menu"data-menu>
