--- a/src/partials/components/modal-btn.html
+++ b/src/partials/components/modal-btn.html
@@ -3,6 +3,7 @@
     <button class="red-button js-open-modal" data-modal="1">modal 1</button>
     <button class="red-button js-open-modal" data-modal="2">modal 2</button>
     <button class="red-button js-open-modal" data-modal="5">modal 5</button>
+    <button class="red-button js-open-modal" data-modal="6">modal 6</button>
 
     <a href="#" class="js-open-modal" data-modal="3">Открыть окно 3</a>
   </div>
