exempl btn edit

--- a/src/partials/components/modal-btn.html
+++ b/src/partials/components/modal-btn.html
@@ -1,5 +1,5 @@
-<section class="container modaltest">
-  <div class="section flex-btn">
+<section class="section  modaltest">
+  <div class="section container flex-btn">
     <button class="red-button js-open-modal" data-modal="1">modal 1</button>
     <button class="red-button js-open-modal" data-modal="2">modal 2</button>
     <button class="red-button js-open-modal" data-modal="5">modal 5</button>
@@ -7,9 +7,6 @@
 
     <a href="#" class="js-open-modal" data-modal="3">Открыть окно 3</a>
   </div>
-</section>
-
-<!-- Несколько модальных окон -->
 
 <div class="modal" data-modal="1">
   <!--   Svg иконка для закрытия окна  -->
@@ -32,3 +29,7 @@
 
 <!-- Подложка под модальным окном -->
 <div class="overlay js-overlay-modal"></div>
+</section>
+
+<!-- Несколько модальных окон -->
+
