--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -19,8 +19,8 @@
     @include section-class();
   }
 
-  @include flex-3in1();
-  @include flex-gap();
+  // @include flex-3in1();
+  // @include flex-gap();
 }
 
 /* Стили для подложки */
