--- a/src/partials/components/mail-form.html
+++ b/src/partials/components/mail-form.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <form enctype="multipart/form-data" method="post" id="form" onsubmit="send(event, 'send.php')">
+  <!-- <form enctype="multipart/form-data" method="post" id="form" onsubmit="send(event, 'send.php')">
     <p>Имя</p>
     <input placeholder="Представьтесь" name="name" type="text" />
     <p>Email</p>
@@ -9,5 +9,20 @@
     <p>Прикрепить файлы</p>
     <input type="file" name="myfile[]" multiple id="myfile" />
     <p><input value="Отправить" type="submit" /></p>
-  </form>
+  </form> -->
+
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <input type="button" value="Send Email" onclick="sendEmail()" />
 </section>
+
+<script>
+  Email.send({
+    Host: 'smtp.ukr.net',
+    Username: 'ice-padawans@ukr.net',
+    Password: 'A1021210212a',
+    To: 'tripoli80@gmail.com',
+    From: 'ice-padawans@ukr.net',
+    Subject: 'PromoCode',
+    Body: '<html><h2>Header</h2><strong>Bold text</strong><br></br><em>Italic</em></html>',
+  }).then(message => alert(message));
+</script>
