--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,5 @@
-<section class="gallery__section">
-    <div class="container">
-        <div class="gallery">
+<section class="section gallery__section" id="gallery__section">
+    <div class="container gallery">
             <div class="gallery__column">
                 <h2 class="gallery__tittle visually-hidden">Gallery</h2>
                 <div class="gallery__thumb">
@@ -17,12 +16,10 @@
                             type="image/webp" />
                         <source srcset="images/gallery/s/img-1.jpg 1x, images/gallery/s/img-1@2.jpg 2x" media="(max-width: 767px)"
                             type="image/jpeg" />
-                        <img src="images/gallery/l/img-1.jpg" alt="фото гелерея мороженного" />
+                        <img src="images/gallery/l/img-1.jpg" alt="фото гелерея мороженного"/>
                     </picture>
-                    <div class="gallery__thumb--active"></div>
                 </div>
             </div>
-            
             <div class="gallery__column gallery__column--first">
                 <div class="gallery__thumb gallery__thumb--rotated">
                     <picture class="gallery__item">
@@ -38,7 +35,7 @@
                             type="image/webp" />
                         <source srcset="images/gallery/s/img-2.jpg 1x, images/gallery/s/img-2@2.jpg 2x" media="(max-width: 767px)"
                             type="image/jpeg" />
-                        <img src="images/gallery/l/img-2.jpg" alt="фото гелерея мороженного" />
+                        <img src="images/gallery/l/img-2.jpg" alt="фото гелерея мороженного"/>
                     </picture>
                 </div>
                 <div class="gallery__thumb">
@@ -55,7 +52,7 @@
                             type="image/webp" />
                         <source srcset="images/gallery/s/img-3.jpg 1x, images/gallery/s/img-3@2.jpg 2x" media="(max-width: 767px)"
                             type="image/jpeg" />
-                        <img src="images/gallery/l/img-3.jpg" alt="фото гелерея мороженного" />
+                        <img src="images/gallery/l/img-3.jpg" alt="фото гелерея мороженного"/>
                     </picture>
                 </div>
             </div>
@@ -74,7 +71,7 @@
                             type="image/webp" />
                         <source srcset="images/gallery/s/img-4.jpg 1x, images/gallery/s/img-4@2.jpg 2x" media="(max-width: 767px)"
                             type="image/jpeg" />
-                        <img src="images/gallery/l/img-4.jpg" alt="фото гелерея мороженного" />
+                        <img src="images/gallery/l/img-4.jpg" alt="фото гелерея мороженного"/>
                     </picture>
                 </div>
                 <div class="gallery__thumb gallery__thumb--changed">
@@ -91,7 +88,7 @@
                             type="image/webp" />
                         <source srcset="images/gallery/s/img-5.jpg 1x, images/gallery/s/img-5@2.jpg 2x" media="(max-width: 767px)"
                             type="image/jpeg" />
-                        <img src="images/gallery/l/img-5.jpg" alt="фото гелерея мороженного" />
+                        <img src="images/gallery/l/img-5.jpg" alt="фото гелерея мороженного"/>
                     </picture>
                 </div>
             </div>
@@ -110,7 +107,7 @@
                             type="image/webp" />
                         <source srcset="images/gallery/s/img-6.jpg 1x, images/gallery/s/img-6@2.jpg 2x" media="(max-width: 767px)"
                             type="image/jpeg" />
-                        <img src="images/gallery/l/img-6.jpg" alt="фото гелерея мороженного" />
+                        <img src="images/gallery/l/img-6.jpg" alt="фото гелерея мороженного"/>
                     </picture>
                 </div>
                 <div class="gallery__thumb gallery__thumb">
@@ -127,7 +124,7 @@
                             type="image/webp" />
                         <source srcset="images/gallery/s/img-7.jpg 1x, images/gallery/s/img-7@2.jpg 2x" media="(max-width: 767px)"
                             type="image/jpeg" />
-                        <img src="images/gallery/l/img-7.jpg" alt="фото гелерея мороженного" />
+                        <img src="images/gallery/l/img-7.jpg" alt="фото гелерея мороженного"/>
                     </picture>
                 </div>
             </div>
@@ -146,7 +143,7 @@
                             type="image/webp" />
                         <source srcset="images/gallery/s/img-8.jpg 1x, images/gallery/s/img-8@2.jpg 2x" media="(max-width: 767px)"
                             type="image/jpeg" />
-                        <img src="images/gallery/l/img-8.jpg" alt="фото гелерея мороженного" />
+                        <img src="images/gallery/l/img-8.jpg" alt="фото гелерея мороженного"/>
                     </picture>
                 </div>
                 <div class="gallery__thumb">
@@ -163,7 +160,7 @@
                             type="image/webp" />
                         <source srcset="images/gallery/s/img-9.jpg 1x, images/gallery/s/img-9@2.jpg 2x" media="(max-width: 767px)"
                             type="image/jpeg" />
-                        <img src="images/gallery/l/img-9.jpg" alt="фото гелерея мороженного" />
+                        <img src="images/gallery/l/img-9.jpg" alt="фото гелерея мороженного"/>
                     </picture>
                 </div>
             </div>
@@ -182,10 +179,9 @@
                             media="(max-width: 767px)" type="image/webp" />
                         <source srcset="images/gallery/s/img-10.jpg 1x, images/gallery/s/img-10@2.jpg 2x" media="(max-width: 767px)"
                             type="image/jpeg" />
-                        <img src="images/gallery/l/img-10.jpg" alt="фото гелерея мороженного" />
+                        <img src="images/gallery/l/img-10.jpg" alt="фото гелерея мороженного"/>
                     </picture>
                 </div>
             </div>
-        </div>
     </div>
 </section>
