--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -6,16 +6,15 @@
     align-items: center;
     max-height: 430px;
 
-    @media screen and (max-width: 767px) {
+    @include mq(mobile-only) {
         gap: 2px;
-        // padding: 0 15px;
     }
 
-    @media screen and (min-width: 768px) {
+    @include mq(tablet) {
         gap: 4px;
     }
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
         gap: 6px;
     }
 
@@ -29,43 +28,46 @@
     &__column {
 
         &--first {
-            @media screen and (max-width: 767px) {
+            
+            @include mq(mobile-only) {
                 padding-top: 10px;
             }
 
-            @media screen and (min-width: 768px) {
+            @include mq(tablet) {
                 padding-top: 15px;
             }
 
-            @media screen and (min-width: 1280px) {
+            @include mq(desktop) {
                 padding-top: 20px;
             }
         }
 
         &--third {
-            @media screen and (max-width: 767px) {
+
+            @include mq(mobile-only) {
                 padding-top: 25px;
             }
 
-            @media screen and (min-width: 768px) {
+            @include mq(tablet) {
                 padding-top: 30px;
             }
 
-            @media screen and (min-width: 1280px) {
+            @include mq(desktop) {
                 padding-top: 35px;
             }
         }
 
         &--fourth {
-            @media screen and (max-width: 767px) {
+            
+            @include mq(mobile-only) {
                 padding-bottom: 10px;
             }
 
-            @media screen and (min-width: 768px) {
+            @include mq(tablet) {
                 padding-bottom: 15px;
             }
 
-            @media screen and (min-width: 1280px) {
+            @include mq(desktop) {
                 padding-bottom: 20px;
             }
         }
@@ -77,11 +79,26 @@
     
     &__thumb {
         position: relative;
-        
-        // border: 1px solid teal;
         border-radius: 15%;
         overflow: hidden;
         z-index: 10;
+
+        transform: translate3d(0px, 0px, 0px) scale(1);
+        transition-property: all;
+        transition-duration: 350ms;
+        transition-delay: 0s;
+        transition-timing-function: linear;
+
+        @include mq(desktop) {
+            &:hover,
+            &:focus {
+                transform: translate3d(-25px, -25px, 30px) scale(1.15);
+                box-shadow: 10px 10px 8px 2px rgba(184, 112, 160, 0.3);
+            }
+        }
+
+        
+
 
         &::before {
             content: '';
@@ -92,58 +109,41 @@
             width: 50px;
             z-index: 100;
             background-color: rgba($color: #ffffff, $alpha: 0.5);
+
             transform: skewX(45deg) translateX(450px);
-            transition: 0.5s;
-            }
+            transition: 250ms;
+        }
         
-        &:hover::before {
-            transform: skewX(45deg) translateX(-150px);
+        &:hover::before,
+        &:focus::before {
+            transform: skewX(45deg) translateX(-200px);
         }
 
         &--changed {
-            @media screen and (max-width: 767px) {
+            @include mq(mobile-only) {
                 max-width: 40px;
             }
 
-            @media screen and (min-width: 768px) {
+            @include mq(tablet) {
                 max-width: 86px;
             }
 
-            @media screen and (min-width: 1280px) {
+            @include mq(desktop) {
                 max-width: 139px;
             }
         }
 
         &--rotated {
-            @media screen and (max-width: 767px) {
+            @include mq(mobile-only) {
                 margin-bottom: 2px;
             }
 
-            @media screen and (min-width: 768px) {
+            @include mq(tablet) {
                 margin-bottom: 4px;
             }
 
-            @media screen and (min-width: 1280px) {
+            @include mq(desktop) {
                 margin-bottom: 6px;
-            }
-        }
-        
-        &:hover,
-        &:focus {
-            animation: addGalleryAnime 1100ms infinite 100ms;
-
-            @keyframes addGalleryAnime {
-                0% {
-                    transform: scale(1);
-                }
-                
-                50% {
-                    transform: scale(1.25);
-                }
-                
-                100% {
-                    transform: scale(1);
-                }
             }
         }
     }
