--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -45,7 +45,7 @@
                         Aliquam erat volutpat. Aenean accumsan.
                         </p>
                     
-                        <button class="white-button about__button js-open-modal" data-modal="2">Read more
+                        <button class="button--white about__button js-open-modal" data-modal="about-modal">Read more
                             <svg class="button__icon" width="7px" height="10px">
                                 <use href="./images/icons.svg#icon-white-button"></use>
                             </svg>
