--- a/src/partials/components/about-modal.html
+++ b/src/partials/components/about-modal.html
@@ -1,5 +1,5 @@
 <!-- Модалка about-->
-<div class="modal about-modal" data-modal="2">
+<div class="modal about-modal" data-modal="about-modal">
     <!--   Svg иконка для закрытия окна  -->
     <svg class="modal__cross js-modal-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
         <path
