--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -146,7 +146,8 @@ background-size: contain;
           }
 }
 
-.white-button.about__button{
+.about__button{
+  @extend %button;
     margin-top: 20px;
 
     font-weight: 700;
@@ -158,6 +159,8 @@ background-size: contain;
           font-size: 16px;
           line-height: 1.31;
       } 
+
+      
 }
 
 // Модалка
